Добавлены иконки. Вращение объекта теперь осуществляется с помощью WASD, вместо стрелок Убраны ненужные импорты и исправлены некоторые варнинги